# nlp-craft

./: .gitignore  README.md  adapters.md  data.ipynb  hg_to_onnx.ipynb  nlp_examples.ipynb  peft.ipynb  pyproject.toml  reading_list.md  sentence_embedding.ipynb
agent_workspace/: README.md
agents/: Notes.md  README.md  agen_deep_dive_notes.md  agent_compare.md  agent_framework_compare.md  agent_framework_comparison_guide.md  ai-agent-guide.md  ai_agent_guide.md  mas.md  (+10 more)
llm_lab/: .gitignore  README.md  pyproject.toml
llm_lab/notebooks/: 00_1_chat_templates_data_prep.ipynb  00_1_chat_templates_data_prep.py  00_unsloth_guide.ipynb  01_1_sft_gemma4_e2b.ipynb  01_1_sft_gemma4_e2b.py  01_sft_modern.ipynb  02_vision_sft_qwen35.ipynb  03_tool_calling_qwen35_gemma4.ipynb  03_tool_calling_qwen35_gemma4.py  04_thinking_sft_qwen3.ipynb  04_thinking_sft_qwen3.py  05_dpo_qwen3.ipynb  05_dpo_qwen3.py  06_vanilla_peft_sft.ipynb  06_vanilla_peft_sft.py  07_moe_sft_tiny.ipynb  07_moe_sft_tiny.py  08_inference_usage.ipynb  08_inference_usage.py
llm_lab/notebooks/ref/: model_analysis.ipynb  pre-training-evaluation.ipynb  tokenizer.ipynb
llm_lab/notebooks/unsloth_series/: 00_whats_new_2026.ipynb  01_internals.ipynb
llm_lab/smoke/: 00_guide_imports_smoke.py  01_1_gemma4_smoke.py  01_sft_modern_smoke.py  02_vision_smoke.py  03_tool_gemma4_smoke.py  03_tool_qwen35_smoke.py  04_thinking_smoke.py  05_dpo_gemma4_smoke.py  05_dpo_qwen35_smoke.py  05_dpo_qwen3_smoke.py  06_vanilla_peft_sft_smoke.py  07_moe_inference_smoke.py  07_moe_smoke.py  08_inference_smoke.py  08_thinking_tool_inference_smoke.py  09_grpo_smoke.py  check_gemma4_thinking.py  verify_templates.py  verify_tool_calling.py
(+106 files in other folders)
