[project]
name = "nlp-works"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.6.0",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.0.4",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.2",
    "langchain-anthropic>=0.3.13",
    "langchain-community>=0.3.23",
    "langchain-openai>=0.3.17",
    "langchain>=0.3.25",
    "langgraph-cli[inmem]>=0.2.10",
    "langgraph>=0.4.3",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.3.0",
    "peft>=0.15.2",
    "scikit-learn>=1.7.0",
]
